# uwu

./: pyproject.toml  uwu.py
.github/workflows/: bump-version.yml  bump_version_and_make_tag.py  release.yml
