[tool.poetry]
name = "uwu"
version = "0.1.0"
description = "Make your terminal more uwu"
authors = ["Jiri Kyjovsky <j1.kyjovsky@gmail.com>"]
maintainers = ["Jiří Kyjovský <j1.kyjovsky@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/alpa-team/uwu"
repository = "https://github.com/alpa-team/uwu"


[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
uwu = "uwu:main"
